--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .hero h1 {
-  font-family: 'Sacramento', cursive;
+  font-family: 'Boldonse', cursive;
   font-size: 6rem;
 }
 
@@ -70,7 +70,7 @@ body {
 
 .mynavbar .navbar-brand,
 .mynavbar .offcanvas-title {
-  font-family: 'Sacramento', cursive;
+  font-family: 'Boldonse', cursive;
   font-size: 3.2rem;
   font-weight: bold;
 }
@@ -95,7 +95,7 @@ body {
 .rsvp h2,
 .gifts h2 {
   color: #800000;
-  font-family: 'Sacramento';
+  font-family: 'Boldonse';
   font-size: 5rem;
   font-weight: bold;
 }
