--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-size: 1.2rem;
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Helvetica World', sans-serif;
   min-height: 4000px;
 }
 
@@ -36,7 +36,7 @@ body {
 }
 
 .hero h1 {
-  font-family: 'Boldonse', cursive;
+  font-family: 'Helvetica World', sans-serif;
   font-size: 6rem;
 }
 
@@ -70,7 +70,7 @@ body {
 
 .mynavbar .navbar-brand,
 .mynavbar .offcanvas-title {
-  font-family: 'Boldonse', cursive;
+  font-family: 'Helvetica World', cursive;
   font-size: 3.2rem;
   font-weight: bold;
 }
@@ -95,7 +95,7 @@ body {
 .rsvp h2,
 .gifts h2 {
   color: #800000;
-  font-family: 'Boldonse';
+  font-family: 'Helvetica World';
   font-size: 5rem;
   font-weight: bold;
 }
@@ -116,7 +116,7 @@ body {
 }
 
 .home .couple h3 {
-  font-family: 'Sacramento';
+  font-family: 'Helvetica World';
   font-size: 2.4rem;
   color: #800000;
 }
@@ -513,4 +513,68 @@ footer li {
     top: 31px;
   }
   
+}
+.undangan-wrapper {
+  display: flex;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin-bottom: 1rem;
+}
+
+.undangan-left {
+  background-color: #eaece9;
+  text-align: center;
+  padding: 20px;
+  flex: 1;
+}
+
+.undangan-left .day {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.undangan-left .date {
+  font-size: 48px;
+  font-weight: bold;
+  color: #1e3c2d;
+}
+
+.undangan-left .month {
+  font-size: 18px;
+  color: #1e3c2d;
+}
+
+.undangan-left .year {
+  font-size: 14px;
+  color: #333;
+}
+
+.undangan-right {
+  flex: 2;
+  padding: 20px;
+}
+
+.undangan-right p {
+  margin: 5px 0;
+  font-size: 14px;
+  color: #444;
+}
+
+.undangan-right .title {
+  font-weight: bold;
+}
+
+.undangan-right .place {
+  margin-top: 10px;
+  font-weight: bold;
+  color: #1e3c2d;
+}
+
+.undangan-right .address {
+  font-size: 13px;
+  color: #555;
 }
